falco-security/route.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: falco
  namespace: falco
spec:
  parentRefs:
  - name: tls
    namespace: cilium
    sectionName: https
  hostnames:
  - "test-falco.ucdialplans.com"
  rules:
  - backendRefs:
    - name: falco-security-falcosidekick-ui
      namespace: falco
      kind: Service
      port: 2802
