falco-security/networkpolicy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: falco
  namespace: falco
spec:
  endpointSelector: {}
  ingress:
    - fromEntities:
        - ingress
      toPorts:
        - ports:
            - port: "2802"
    - fromEndpoints:
        - matchLabels:
            app: cloudflare-tunnel
      toPorts:
        - ports:
            - port: "2802"
  egress:
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
          rules:
            dns:
              - matchPattern: "*"
    - toEndpoints:
        - {}
    - toEntities:
        - world
      toPorts:
        - ports:
            - port: "443"
